Rename muteban to chatban, left muteban aliases for chatban

--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -406,7 +406,7 @@ set g_ban_sync_trusted_servers_verify 0 "when set to 1, additional bans sent by 
 set g_ban_telluser 1 "notify the banned player about it when they try to join"
 set g_banned_list "" "format: IP remainingtime IP remainingtime ..."
 set g_banned_list_idmode "1" "when set, the IP banning system always uses the ID over the IP address (so a user in a banned IP range can connect if they have a valid signed ID)"
-set g_muteban_list "" "list of banned players from chat, format: IP playerkey ..."
+set g_chatban_list "" "list of banned players from chat, format: IP playerkey ..."
 set g_playban_list "" "list of banned players from playing (forced to spectate), format: IP playerkey ..."
 set g_voteban_list "" "list of banned players from voting, format: IP playerkey ..."
 
