battle royale: add option to automatically determine squad size

--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -578,7 +578,7 @@ set g_br_not_assault_maps 0 "when this is set, CTF maps will NOT be listed in BR
 set g_br_not_ctf_maps 0 "when this is set, CTF maps will NOT be listed in BR"
 set g_br_not_dm_maps 0 "when this is set, DM maps will NOT be listed in BR"
 set g_br_minplayers 2 "minimum players to start the BR match"
-set g_br_squad_size 3 "maximum squad size"
+set g_br_squad_size 3 "maximum squad size, use 0 or a negative number to determine squad size based on the amount of players up to the specified number or unlimited if 0"
 set g_br_squad_colors 1 "assign each squad a random color scheme and force players to use it"
 set g_br_squad_waypoint_distance 1500 "minimum distance required to show an ally waypoint"
 set g_br_startweapons 0 "when disabled, players land from the dropship without weapons"
