--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -408,6 +408,7 @@ set g_banned_list "" "list of banned players; player format: IP remainingtime"
 set g_banned_list_idmode "1" "when set, the IP banning system always uses the ID over the IP address (so a user in a banned IP range can connect if they have a valid signed ID)"
 set g_chatban_list "" "list of banned players from chat; player format: IP or playerkey"
 set g_playban_list "" "list of banned players from playing (forced to spectate); player format: IP or playerkey"
+set g_playban_minigames 0 "disallow playbanned players (who are forced to spectate) from playing minigames"
 set g_voteban_list "" "list of banned players from voting; player format: IP or playerkey"
 
 // useful vote aliases
