Refined default values for mouse `sensitivity` (halved from 6 to 3) and `mastervolume` (9.0 to 7.0).

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -76,7 +76,7 @@ seta cl_spawn_point_particles 1 "pointparticles effect at all spawn points" // m
 seta cl_spawn_point_dist_max 1200 "maximum distance from which spawnpoint particles will be visible"
 
 freelook 1
-sensitivity 6
+sensitivity 3
 v_gamma 1
 viewsize 100
 bgmvolume 1
@@ -812,6 +812,7 @@ set cl_lockview 0 "when 1, the camera does not move any more; when 2, you can on
 
 // we now use mastervolume
 volume 1
+mastervolume 0.25
 
 // sucks less than the old one
 cl_decals_newsystem 1
