--- a/mutators.cfg
+++ b/mutators.cfg
@@ -525,3 +525,12 @@ set g_pinata_offhand 0 "if enabled, the second weapon will drop as well while du
 // =========
 set g_cloaked 0 "display all players mostly invisible"
 set g_balance_cloaked_alpha 0.25 "opacity of cloaked players"
+
+// ====================
+// killers spawn faster
+// ====================
+set g_killers_spawn_faster 0 "Killers spawn faster: a mutator that penalizes dying, and rewards killing, by adjusting time to respawn"
+set g_killers_spawn_faster_frag_modifier -0.25 "Killers spawn faster: respawntime factor change when fragging someone"
+set g_killers_spawn_faster_death_modifier 0.5 "Killers spawn faster: respawntime factor change when dying"
+set g_killers_spawn_faster_min 0.2 "Killers spawn faster: minimum factor the respawn time can be multiplied with"
+set g_killers_spawn_faster_max 5.0 "Killers spawn faster: maximum factor the respawn time can be multiplied with"
