Add cvar to display player number alongside their name in the chat

--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -383,6 +383,7 @@ set g_chat_spectator_allowed 1 "allow spectators to communicate via in-game chat
 set g_chat_team_allowed 1 "allow players to communicate via in-game team chat"
 set g_chat_teamcolors 0 "colorize nicknames in team color for chat"
 set g_chat_tellprivacy 1 "when disabled, tell messages are also sent to the server console log... otherwise they're kept private between players."
+set g_chat_show_playerid 0 "when enabled, show the player numbers next to their names in the chat"
 set g_nick_flood_timeout 120 "time after which nick flood protection resets (set to 0 to disable nick flood checking)"
 set g_nick_flood_penalty 0.5 "duration of the nick flood penalty"
 set g_nick_flood_penalty_yellow 3 "number of changes to allow before warning and movement blocking"
