Added g_monsters_teams cvar to monsters.cfg

--- a/monsters.cfg
+++ b/monsters.cfg
@@ -104,6 +104,7 @@ set g_monsters_drop_time 10
 set g_monsters_ignoretraces 1
 set g_monsters_lineofsight 1
 set g_monsters_owners 1
+set g_monsters_teams 1 "Assign a team to monsters. Prevents them from targeting teammates"
 set g_monsters_playerclip_collisions 1
 set g_monsters_score_kill 0
 set g_monsters_score_spawned 0
