--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -224,6 +224,8 @@ seta hud_panel_strafehud_sonar_pitch_exponent "1" "exponent of the dynamic playb
 seta hud_panel_strafehud_vangle "0" "set to \"1\" to enable the vertical angle indicator"
 seta hud_panel_strafehud_vangle_color "0.75 0.75 0.75" "color of the vertical angle text"
 seta hud_panel_strafehud_vangle_size "1" "size of the vertical angle text (relative to the panel height)"
+seta hud_panel_strafehud_strafeefficiency "0" "set to \"1\" to enable the strafe efficiency indicator"
+seta hud_panel_strafehud_strafeefficiency_size "1" "size of the strafe efficiency text (relative to the panel height)"
 seta hud_panel_strafehud_projection "0" "strafehud projection mode, \"0\" = linear, \"1\" = perspective, \"2\" = panoramic"
 
 // hud panel aliases
