Fix cl_nade_type description; remove a dangling semicolon from a macro

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -207,7 +207,7 @@ set g_nades_nade_newton_style 0 "nade velocity: 0 is absolute, 1 is relative (ta
 set g_nades_nade_type 1 "Type of the off-hand grenade. 1:normal 2:napalm 3:ice 4:translocate 5:spawn 6:heal 7:pokenade 8:entrap 9:veil, 10:ammo, 11:darkness"
 
 seta cl_nade_timer 1 "show a visual timer for nades, 1 = only circle, 2 = circle with text"
-seta cl_nade_type 3 "selected type of the off-hand grenade. 1:normal 2:napalm 3:ice 4:translocate 5:spawn 6:heal 7:pokenade 8:entrap 9:veil 10:ammo 11:darkness"
+seta cl_nade_type 3 "selected type of the off-hand grenade. 1:normal 2:napalm 3:ice 4:translocate 5:spawn 6:heal 7:pokenade 8:entrap 9:veil 10:ammo 11:dark"
 seta cl_pokenade_type "zombie" "monster to spawn"
 
 // ------------
