Refactor Dark nade into Darkness nade and remove nade_green effects that could be used in the future

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -305,10 +305,10 @@ set g_nades_ammo_friend 1 "Multiplier of ammo given to team mates"
 set g_nades_ammo_foe   -2 "Multiplier of ammo given to enemies"
 
 // Darkness (11)
-set g_nades_dark 0 "Darkness nade: blinds enemies"
-set g_nades_dark_time 4 "How long the dark field will last"
-set g_nades_dark_explode 0 "Whether the darkness nade should explode again once the dark field dissipated"
-set g_nades_dark_teamcheck 2 "0: friendly fire, 1: nade owner isn't affected, 2: don't blind teammates"
+set g_nades_darkness 0 "Darkness nade: blinds enemies"
+set g_nades_darkness_time 4 "How long the dark field will last"
+set g_nades_darkness_explode 0 "Whether the darkness nade should explode again once the dark field dissipated"
+set g_nades_darkness_teamcheck 2 "0: friendly fire, 1: nade owner isn't affected, 2: don't blind teammates"
 
 // ============
 //  camp check
