Remove unneeded *_TEAMCHECK macros, simplify checks and reduce code

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -207,7 +207,7 @@ set g_nades_nade_newton_style 0 "nade velocity: 0 is absolute, 1 is relative (ta
 set g_nades_nade_type 1 "Type of the off-hand grenade. 1:normal 2:napalm 3:ice 4:translocate 5:spawn 6:heal 7:pokenade 8:entrap 9:veil, 10:ammo, 11:darkness"
 
 seta cl_nade_timer 1 "show a visual timer for nades, 1 = only circle, 2 = circle with text"
-seta cl_nade_type 3 "selected type of the off-hand grenade. 1:normal 2:napalm 3:ice 4:translocate 5:spawn 6:heal 7:pokenade 8:entrap 9:veil 10:ammo 11:dark"
+seta cl_nade_type 3 "selected type of the off-hand grenade. 1:normal 2:napalm 3:ice 4:translocate 5:spawn 6:heal 7:pokenade 8:entrap 9:veil 10:ammo 11:darkness"
 seta cl_pokenade_type "zombie" "monster to spawn"
 
 // ------------
@@ -261,7 +261,7 @@ set g_nades_ice 1 "Ice nade: freezes and reduces health"
 set g_nades_ice_freeze_time 3 "How long the ice field will last"
 set g_nades_ice_health      0 "How much health the player will have after being unfrozen"
 set g_nades_ice_explode     0 "Whether the ice nade should explode again once the ice field dissipated"
-set g_nades_ice_teamcheck   2 "0: friendly fire, 1: nade owner isn't affected, 2: don't freeze teammates"
+set g_nades_ice_teamcheck   2 "0: freezes everyone including the player who threw the nade, 1: freezes enemies and teammates, 2: freezes only enemies"
 
 // Translocate (4)
 set g_nades_translocate 1 "Translocate nade: teleports into explosion nade location"
@@ -308,7 +308,7 @@ set g_nades_ammo_foe   -2 "Multiplier of ammo given to enemies"
 set g_nades_darkness 0 "Darkness nade: blinds enemies"
 set g_nades_darkness_time 4 "How long the dark field will last"
 set g_nades_darkness_explode 0 "Whether the darkness nade should explode again once the dark field dissipated"
-set g_nades_darkness_teamcheck 2 "0: friendly fire, 1: nade owner isn't affected, 2: don't blind teammates"
+set g_nades_darkness_teamcheck 2 "0: blinds everyone including the player who threw the nade, 1: blinds enemies and teammates, 2: blinds only enemies"
 
 // ============
 //  camp check
