--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -426,7 +426,7 @@ seta g_waypointsprite_turrets_onlyhurt 0 "only show the turret waypoint for a sh
 seta g_waypointsprite_uppercase 1
 seta g_waypointsprite_text 0 "Always show text instead of icons, setting this to 0 will still use text if the icon is unavailable"
 seta g_waypointsprite_iconsize 32
-seta g_waypointsprite_iconcolor 0 "Show the icon at natural color rather than the waypoint's color"
+seta g_waypointsprite_iconcolor 0 "saturation of the waypoint's color applied on top of the waypoint's icon, from 0 (natural icon's color) to 1"
 
 alias "g_waypointsprite_personal"	"impulse 30"
 alias "g_waypointsprite_personal_p"	"impulse 31"
