Compress font textures to save VRAM at low graphics settings

--- a/effects-med.cfg
+++ b/effects-med.cfg
@@ -10,6 +10,7 @@ gl_flashblend 0
 gl_picmip 0
 gl_texturecompression_2d 0
 gl_texturecompression_sky 1
+r_font_compress 0
 mod_q3bsp_nolightmaps 0
 r_bloom 0
 r_coronas 1
