--- a/effects-omg.cfg
+++ b/effects-omg.cfg
@@ -10,6 +10,7 @@ gl_flashblend 1
 gl_picmip 1337
 gl_texturecompression_2d 1
 gl_texturecompression_sky 1
+r_font_compress 1
 mod_q3bsp_nolightmaps 1
 r_bloom 0
 r_coronas 1
