--- a/bal-wep-xdf.cfg
+++ b/bal-wep-xdf.cfg
@@ -348,6 +348,7 @@ set g_balance_hagar_primary_damageforcescale 0
 set g_balance_hagar_primary_edgedamage 12.5
 set g_balance_hagar_primary_force 92
 set g_balance_hagar_primary_health 15
+set g_balance_hagar_primary_homing_speed_turnrate 0
 set g_balance_hagar_primary_lifetime 5
 set g_balance_hagar_primary_radius 25
 set g_balance_hagar_primary_refire 0.11
