re-allow main menu to play music when coming back to it

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -493,7 +493,20 @@ seta menu_tooltips 1 "menu tooltips: 0 disabled, 1 enabled, 2 also shows cvar or
 set menu_picmip_bypass 0 "bypass texture quality enforcement based on system resources, not recommended and may cause crashes!"
 set menu_showboxes 0 "show item bounding boxes (debug)"
 set menu_cvarlist_onlymodified 0 "show only modified cvars in the cvar list"
-set menu_force_on_disconnection 1 "force to show the menu after you get disconnected"
+
+set menu_no_music_nor_welcome 0 "don't play the menu music and skip the welcome announcer"
+
+seta menu_weaponarena ""
+
+seta menu_maxplayers 16 "maxplayers value when the menu starts a game"
+
+seta menu_mouse_absolute 1 "use the OS mouse pointer motion for menu"
+seta menu_mouse_speed 1 "speed multiplier for the mouse in the menu (does not affect in-game aiming)"
+set menu_use_default_hostname 1
+alias sethostname "set menu_use_default_hostname 0; hostname $*"
+
+set _menu_alpha "" // will be set by menu QC to the current fading of the menu, can be used by CSQC to fade items
+set _menu_initialized 0 "is 0 on first menu loading, 1 later"
 
 set _menu_credits_export 0 "set to 1 and restart the menu to export credits to credits.txt (menu will automatically reset to 0)"
 alias menu_credits_export "_menu_credits_export 1; menu_restart"
@@ -586,10 +599,6 @@ seta menu_slist_categories_CAT_OVERKILL_override ""
 seta menu_slist_categories_CAT_INSTAGIB_override ""
 seta menu_slist_categories_CAT_DEFRAG_override ""
 
-seta menu_weaponarena ""
-
-seta menu_maxplayers 16 "maxplayers value when the menu starts a game"
-
 // useful keybind to maximize the chat area temporarily
 // HUD code takes care of many of these now...
 //set _backup_con_chatvars_set 0
@@ -659,11 +668,6 @@ gl_texturecompression_q3bsplightmaps 0
 gl_texturecompression_sky 1
 
 cl_maxfps 250
-
-seta menu_mouse_absolute 1 "use the OS mouse pointer motion for menu"
-seta menu_mouse_speed 1 "speed multiplier for the mouse in the menu (does not affect in-game aiming)"
-set menu_use_default_hostname 1
-alias sethostname "set menu_use_default_hostname 0; hostname $*"
 
 seta cl_weaponpriority "vaporizer okhmg okrpc oknex vortex fireball mortar okmachinegun machinegun hagar rifle arc electro devastator crylink minelayer okshotgun shotgun shockwave hlac tuba blaster porto seeker hook" "weapon priority list"
 seta cl_weaponpriority_useforcycling 0 "when set, weapon cycling by the mouse wheel makes use of the weapon priority list (the special value 2 uses the weapon ID list for cycling)"
@@ -767,9 +771,6 @@ set cl_shootfromfixedorigin "" "dummy cvar, value is synced from the server's g_
 
 set cl_jumpspeedcap_min "" "dummy cvar, value is synced from the server's sv_jumpspeedcap_min setting"
 set cl_jumpspeedcap_max "" "dummy cvar, value is synced from the server's sv_jumpspeedcap_max setting"
-
-set _menu_alpha "" // will be set by menu QC to the current fading of the menu, can be used by CSQC to fade items
-set _menu_initialized 0 "is 0 on first menu loading, 1 later"
 
 seta cl_noantilag 0 "turn this on if you believe antilag is bad"
 
