Explicitly enable sv_gameplayfix_unstickplayers
Xonotic's QC physics still depend on this cvar, but the feature is
deprecated in current DP.

--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -545,6 +545,9 @@ alias pm_gw "prvm_globalwatchpoint menu ${* ?}"
 // otherwise, antilag breaks
 sv_gameplayfix_consistentplayerprethink 1
 
+// Xonotic's QC physics still depend on this cvar (feature deprecated in DP master)
+sv_gameplayfix_unstickplayers 1
+
 // improve some minor details
 sv_gameplayfix_gravityunaffectedbyticrate 1
 sv_gameplayfix_nogravityonground 1
