--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -287,6 +287,7 @@ set _menu_cl_name ""
 set _menu_cl_color ""
 set _menu_cl_playerskin ""
 set _menu_cl_playermodel ""
+set _menu_profile_apply_button_command_executed 0
 
 // effects
 r_glsl_vertextextureblend_usebothalphas 1 // allows to abuse texture blending as detail texture
