Support only perfect ticrates: 32hz 64hz 128hz, raise default to 64hz
At these ticrates there's no floating point error accumulation.

Signed-off-by: bones_was_here <bones_was_here@xonotic.au>

--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -581,7 +581,7 @@ sv_cullentities_trace_prediction_time 0.4
 sv_cullentities_trace_eyejitter 0
 
 // less "lagging" of other players, but also less PL tolerant... let's try this
-sv_clmovement_inputtimeout 0.066 // slightly less than 2 frames, so only one frame can be compensated
+sv_clmovement_inputtimeout 0.06249 // slightly less than 2 32hz frames, so only one frame can be compensated
 
 // strength sound settings
 set sv_strengthsound_antispam_time 0.1 "minimum distance of strength sounds"
