add comments and demo start and end hooks

--- a/gamemodes-client.cfg
+++ b/gamemodes-client.cfg
@@ -39,3 +39,5 @@ alias cl_hook_gamestart_surv
 alias cl_hook_gameend
 alias cl_hook_shutdown
 alias cl_hook_activeweapon
+alias cl_hook_demostart
+alias cl_hook_demoend
