--- a/gamemodes-client.cfg
+++ b/gamemodes-client.cfg
@@ -36,8 +36,10 @@ alias cl_hook_gamestart_mayhem
 alias cl_hook_gamestart_tmayhem
 alias cl_hook_gamestart_tka
 alias cl_hook_gamestart_surv
+alias cl_hook_intermission
 alias cl_hook_gameend
 alias cl_hook_shutdown
 alias cl_hook_activeweapon
 alias cl_hook_demostart
+alias cl_hook_demointermission
 alias cl_hook_demoend
