create menu_cmd isdemo

--- a/commands.cfg
+++ b/commands.cfg
@@ -119,6 +119,7 @@ alias menu_showsandboxtools "menu_cmd directmenu SandboxTools"
 alias menu_showquitdialog "menu_cmd directmenu Quit"
 alias menu_showgamemenudialog "menu_cmd directmenu GameMenu"
 alias menu_showmonstertools "menu_cmd directmenu MonsterTools"
+alias menu_isdemo "menu_cmd isdemo ${* ?}"
 
 // command executed before loading a map by the menu
 // makes sure maxplayers is at least minplayers or minplayers_per_team * 4 or bot_number + 1
