Freeze Tag: implement lives: a player now can get frozen only 2 times (configurable with g_freezetag_frozen_lives) in a round before getting eliminated; on freeze a centerprint message shows the number of lives remaining.

--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -418,6 +418,8 @@ set g_freezetag_revive_auto_reducible 1 "reduce auto-revival time when frozen pl
 set g_freezetag_revive_auto_reducible_forcefactor 0.01 "hit force to time reduction conversion factor"
 set g_freezetag_revive_auto_reducible_maxforce 400 "max force considered at once"
 set g_freezetag_revive_spawnshield 1 "apply spawnshield for this time in seconds after the player has been revived"
+set g_freezetag_spectate_enemies 0 "allow eliminated players to spectate enemy players during Freeze Tag games. -1 blocks freeroam camera. Changes to this cvar take effect from the next round"
+set g_freezetag_frozen_lives 2 "number of times a player can get frozen before getting eliminated. If this number is <= 0 (or >= 100) players will never get eliminated (inifinite lives)"
 set g_freezetag_frozen_maxtime 60 "frozen players will be automatically unfrozen after this time in seconds"
 set g_freezetag_teams_override 0
 set g_freezetag_team_spawns 0 "when 1, players spawn from the team spawnpoints of the map, if any"
