--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ cscope*
 .DS_Store
 .idea/
 Thumbs.db
+
+# sv_game hashtest local test re-use
+data/maps/
+data/maps/_init.bsp
+data/maps/stormkeep.mapinfo
+data/maps/stormkeep.waypoints
+data/maps/stormkeep.waypoints.cache
+data/stormkeep.pk3
