cl_hook_intermission to cl_hook_gameintermission

--- a/gamemodes-client.cfg
+++ b/gamemodes-client.cfg
@@ -36,7 +36,7 @@ alias cl_hook_gamestart_mayhem
 alias cl_hook_gamestart_tmayhem
 alias cl_hook_gamestart_tka
 alias cl_hook_gamestart_surv
-alias cl_hook_intermission
+alias cl_hook_gameintermission
 alias cl_hook_gameend
 alias cl_hook_shutdown
 alias cl_hook_activeweapon
