HUD hit indicator: implement a 2d directional hit indicator around the screen center when a player hits you
* for now only 1 indicator at a time
* starts to fade out as soon as it appears
* the higher the damage, the bigger the indicator size
* damage is accumulated
* hidden when the attacker is not visible
* disabled if chase_active is enabled
* shown while spectating a player too
* implemented as an extension of damagetext (requires sv_damagetext >= 2)

Extra: added cl_damagetext_received (disabled by default) that allows displaying damage text when you receive damage too

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -201,6 +201,12 @@ seta cl_autotaunt 0 "automatically taunt enemies when fragging them"
 seta cl_voice_directional 1	"0 = all voices are non-directional, 1 = all voices are directional, 2 = only taunts are directional"
 seta cl_voice_directional_taunt_attenuation 0.5 "this defines the distance from which taunts can be heard"
 
+seta cl_hit_indicator 1 "show a 2d directional indicator around the screen center when a player hits you"
+seta cl_hit_indicator_fade_time 1.5 "how long hit indicator takes to fade away"
+seta cl_hit_indicator_fade_alpha 0.8 "initial hit indicator alpha"
+seta cl_hit_indicator_radius 0.15 "show the directional indicator at this percentage of the screen from the center"
+seta cl_hit_indicator_size 1.1 "hit indicator size"
+
 seta cl_hitsound 1 "play a hit notifier sound when you have hit an enemy, 1: same pitch 2: decrease pitch with more damage 3: increase pitch with more damage"
 set cl_hitsound_antispam_time 0.05 "don't play the hitsound more often than this"
 seta cl_hitsound_min_pitch 0.75 "minimum pitch of hit sound"
@@ -465,6 +471,7 @@ seta cl_damagetext_accumulate_alpha_rel "0.65" "Only update existing damage text
 seta cl_damagetext_accumulate_lifetime "-1" "Only update existing damage text when it is younger than this many seconds, negative always updates"
 seta cl_damagetext_friendlyfire "1" "0: never show for friendly fire, 1: when more than 0 damage, 2: always"
 seta cl_damagetext_friendlyfire_color "1 0 0" "Damage text color for friendlyfire"
+seta cl_damagetext_received "0" "Draw damage received too"
 
 seta cl_damagetext_2d 1 "Show damagetext in 2D coordinates if the enemy's location is not known"
 seta cl_damagetext_2d_pos "0.47 0.53 0" "2D damage text initial position (X and Y between 0 and 1)"
