HUD hit indicator: allow displaying damage text together with the hit indicator (disabled by default)

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -202,10 +202,14 @@ seta cl_voice_directional 1	"0 = all voices are non-directional, 1 = all voices 
 seta cl_voice_directional_taunt_attenuation 0.5 "this defines the distance from which taunts can be heard"
 
 seta cl_hit_indicator 1 "show a 2d directional indicator around the screen center when a player hits you"
+seta cl_hit_indicator_color "1 0 0" "hit indicator color"
 seta cl_hit_indicator_fade_time 1.5 "how long hit indicator takes to fade away in seconds (max 2 seconds)"
 seta cl_hit_indicator_fade_alpha 0.8 "initial hit indicator alpha"
 seta cl_hit_indicator_radius 0.15 "show the directional indicator at this percentage of the screen from the center"
 seta cl_hit_indicator_size 1.1 "hit indicator size"
+seta cl_hit_indicator_text 0 "show damage text together with the hit indicator"
+seta cl_hit_indicator_text_color "1 0.5 0.5" "hit indicator text color"
+seta cl_hit_indicator_text_size 11 "hit indicator text size"
 
 seta cl_hitsound 1 "play a hit notifier sound when you have hit an enemy, 1: same pitch 2: decrease pitch with more damage 3: increase pitch with more damage"
 set cl_hitsound_antispam_time 0.05 "don't play the hitsound more often than this"
