--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -204,7 +204,8 @@ seta cl_voice_directional_taunt_attenuation 0.5 "this defines the distance from 
 seta cl_hit_indicator 1 "show a 2d directional indicator around the screen center when a player hits you"
 seta cl_hit_indicator_color "1 0 0" "hit indicator color"
 seta cl_hit_indicator_fade_time 1.5 "how long hit indicator takes to fade away in seconds (max 2 seconds)"
-seta cl_hit_indicator_fade_alpha 0.8 "initial hit indicator alpha"
+seta cl_hit_indicator_fade_alpha_max 0.8 "initial hit indicator alpha"
+seta cl_hit_indicator_fade_alpha_min 0.4 "final hit indicator alpha"
 seta cl_hit_indicator_radius 0.15 "show the directional indicator at this percentage of the screen from the center"
 seta cl_hit_indicator_size 1.1 "hit indicator size"
 seta cl_hit_indicator_text 0 "show damage text together with the hit indicator"
