--- a/xonotic-common.cfg
+++ b/xonotic-common.cfg
@@ -154,7 +154,7 @@ set debug_deglobalization_clear 0 "make the new wrappers set globals to NaN afte
 // disabling until it's complete
 set prvm_garbagecollection_enable 0
 
-set g_mapinfo_q3compat 1 "0: generate .mapinfo if none exists, ignoring .arena and .defi files. 1: read .arena and .defi files, don't generate .mapinfo. 2: generate .mapinfo if none exists using data from .arena files instead of reading them, .defi files continue to be used directly"
+set g_mapinfo_q3compat 1 "If no .mapinfo file exists:: 0: generate .mapinfo using entities only. 1: read .arena and .defi files directly, don't generate .mapinfo. 2: generate .mapinfo using .arena and .defi files, and entities. 3: generate .mapinfo using .arena and .defi files only."
 
 // load console command aliases and settings
 exec commands.cfg
