Make scoreboard team selection default even in pre-0.8.6 configs. Allow enabling menu team selection with team_selection_type 0

--- a/commands.cfg
+++ b/commands.cfg
@@ -112,7 +112,6 @@ alias tdem "timedemo $1"
 //  menu_cmd (menu command) - menu/command/menu_cmd.qc
 // ===============================================
 alias menu_showwelcomedialog "menu_cmd directmenu Welcome"
-alias menu_showteamselect "menu_cmd directmenu TeamSelect"
 alias menu_showhudexit "menu_cmd directmenu HUDExit"
 alias menu_showhudoptions "menu_cmd directpanelhudmenu ${* ?}"
 alias menu_showsandboxtools "menu_cmd directmenu SandboxTools"
@@ -150,10 +149,16 @@ alias radar "qc_cmd_cl hud radar ${* ?}"
 alias scoreboard_columns_help "qc_cmd_cl hud scoreboard_columns_help"
 alias scoreboard_columns_set "qc_cmd_cl hud scoreboard_columns_set ${* ?}"
 
+seta team_selection_type 1 "Team selection type: 0 menu, 1 scoreboard"
 set _scoreboard_team_selection_available 0 // set to 1 by CSQC
-alias _team_selection_show1 "_scoreboard_team_selection 1"
-alias _team_selection_show0 menu_showteamselect
-alias team_selection_show "_team_selection_show$_scoreboard_team_selection_available"
+alias _team_selection_show00 "menu_cmd directmenu TeamSelect"
+alias _team_selection_show01 "menu_cmd directmenu TeamSelect"
+alias _team_selection_show10 "menu_cmd directmenu TeamSelect"
+alias _team_selection_show11 "_scoreboard_team_selection 1"
+alias team_selection_show "_team_selection_show${_scoreboard_team_selection_available}${team_selection_type}"
+
+// legacy alias
+alias menu_showteamselect team_selection_show
 
 // ========================================================
 //  cmd (client-to-server command) - server/command/cmd.qc
