Update default video settings
vid_resizable was fixed and defaults to enabled in DP, vid_bitsperpixel
isn't configurable and setting it currently causes a warn (almost all
hardware supports only 24bpp).

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -80,13 +80,12 @@ sensitivity 3
 v_gamma 1
 viewsize 100
 bgmvolume 0.75
-// fullscreen 1024x768x32bit
-vid_bitsperpixel 32
+
+// fullscreen 1024x768
 vid_fullscreen 1
 vid_width 1024
 vid_height 768
 vid_pixelheight 1
-vid_resizable 0 // cannot be turned on before it is sure it cannot cause a r_restart
 vid_desktopfullscreen 1
 prvm_language en
 set _menu_prvm_language ""
