--- a/testing.cfg
+++ b/testing.cfg
@@ -14,5 +14,9 @@ alias test_arc_bounce_burst "settemp g_balance_arc_bolt_bounce_count 1 ; settemp
 alias test_ctf_stalemate90 "settemp g_ctf_stalemate_time 90"
 alias test_ctf_stalemate120 "settemp g_ctf_stalemate_time 120"
 
-alias testing_enable "addvote test_blaster_switch ; addvote test_crylink_sec_horizontal ; addvote test_rocket_flying ; addvote test_ctf_stalemate90 ; addvote test_ctf_stalemate120 ; addvote test_arc_bounce ; addvote test_arc_bounce_burst"
-alias testing_disable "delvote test_blaster_switch ; delvote test_crylink_sec_horizontal ; delvote test_rocket_flying ; delvote test_ctf_stalemate90 ; delvote test_ctf_stalemate120 ; delvote test_arc_bounce ; delvote test_arc_bounce_burst"
+// defer addvote and delvote execution because program commands can't be executed at startup
+// (no program is loaded yet)
+alias _addvote_def "defer 1 \"addvote $1\""
+alias _delvote_def "defer 1 \"delvote $1\""
+alias testing_enable "_addvote_def test_blaster_switch ; _addvote_def test_crylink_sec_horizontal ; _addvote_def test_rocket_flying ; _addvote_def test_ctf_stalemate90 ; _addvote_def test_ctf_stalemate120 ; _addvote_def test_arc_bounce ; _addvote_def test_arc_bounce_burst"
+alias testing_disable "_delvote_def test_blaster_switch ; _delvote_def test_crylink_sec_horizontal ; _delvote_def test_rocket_flying ; _delvote_def test_ctf_stalemate90 ; _delvote_def test_ctf_stalemate120 ; _delvote_def test_arc_bounce ; _delvote_def test_arc_bounce_burst"
