Add help_loop_start alias that works even if executed at startup, unlike help_loop

--- a/help.cfg
+++ b/help.cfg
@@ -2,7 +2,7 @@
 
 // First exec this file, then the correct help-*.cfg for your ruleset.
 
-// You can start the help system with the command help_loop but this has been found to annoy players.
+// You can start the help system with the command help_loop_start but this has been found to annoy players.
 // A better way is to put `alias sv_hook_gamestart_all "defer 20 help_next"` into your server.cfg,
 // that way you get one message per match.
 
@@ -23,3 +23,6 @@ alias help_doit2 "help_say $help_cfg_prefix$help_tmp_msg"
 alias help_inc "sv_cmd rpn /help_tmp_index help_tmp_index 1 add $help_msg_count mod def"
 alias help_next "help_inc; help_doit" // increment first - if the ruleset changed, the number of tips could have too, this avoids overflow
 alias help_loop "help_next; defer $help_cfg_time help_loop"
+
+// defer help_loop so that it works even at startup (sv_cmd rpn is not available yet)
+alias help_loop_start "defer 1 help_loop"
